--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ logging.level.org.mybatis=ERROR
 server.port=8080
 
 # MyBatis
-mybatis.mapper-locations=classpath*:pl.edu.pw.mwo_lab2_crud_shop.mapper.entities.client/*.xml
+mybatis.mapper-locations=classpath*:pl.edu.pw.mwo_lab2_crud_shop.mapper.*.*/*.xml
