--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=password
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
